Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/widget/fresh/index.html
+++ b/source/widget/fresh/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>header</title>
+    <title>新鲜事模块</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
     <!-- 这是CSS库文件 -->
@@ -73,7 +73,7 @@
         <!--新鲜事单条列表信息结束————图片-->
 
          <!--新鲜事单条列表信息开始————视频-->
-        <div class="fresh-list small-12" style="display:none">
+        <div class="fresh-list small-12">
             <div class="fresh-avatar left">
                 <a href ="###">
                     <img src="img/fresh_avatar.png" />
@@ -132,7 +132,7 @@
         <!--新鲜事单条列表信息结束————视频-->
 
         <!--新鲜事单条列表信息开始————作题-->
-        <div class="fresh-list small-12"  style="display:none">
+        <div class="fresh-list small-12">
             <div class="fresh-avatar left">
                 <a href ="###">
                     <img src="img/fresh_avatar.png" />
@@ -194,7 +194,7 @@
         <!--新鲜事单条列表信息结束————作题-->
 
         <!--新鲜事单条列表信息开始————我自己的头部加这个fresh-myself-list类名详情信息文本换行显示-->
-        <div class="fresh-list fresh-myself-list small-12" style="display:none">
+        <div class="fresh-list fresh-myself-list small-12">
             <div class="fresh-avatar left">
                 <a href ="###">
                     <img src="img/fresh_avatar.png" />
@@ -252,7 +252,7 @@
         <!--新鲜事单条列表信息结束————我自己的-->
 
         <!--新鲜事单条列表信息开始————关注的人-->
-        <div class="fresh-list small-12" style="display:none">
+        <div class="fresh-list small-12">
             <div class="fresh-avatar left">
                 <a href ="###">
                     <img src="img/fresh_avatar.png" />
@@ -303,7 +303,7 @@
 
 
         <!--新鲜事单条列表信息开始————@我的fresh-contact-my-list-->
-        <div class="fresh-list fresh-contact-my-list small-12" style="display:none">
+        <div class="fresh-list fresh-contact-my-list small-12">
             <div class="fresh-avatar left">
                 <a href ="###">
                     <img src="img/fresh_avatar.png" />
@@ -380,7 +380,7 @@
         <!--新鲜事单条列表信息结束————@我的-->
 
         <!--新鲜事单条列表信息开始————热门新鲜事list加fresh-popular-list-->
-        <div class="fresh-list fresh-popular-list small-12"  style="display:none">
+        <div class="fresh-list fresh-popular-list small-12">
             <div class="fresh-avatar left">
                 <a href ="###">
                     <img src="img/fresh_avatar.png" />
