找老师页面card宽度固定 看直播页面滚动宽度固定

--- a/source/widget/gold/Modal-clothing.html
+++ b/source/widget/gold/Modal-clothing.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" type="text/css" href="../../lib/foundation/css/foundation.css">
     <!-- 这是当前模块样式文件 -->
     <link href="gold.css" rel="stylesheet">
+    <style>
+        body{background-color: #fff}
+    </style>
 </head>
 <body>
 <div class="clothing-box">
