--- a/source/widget/gold/Modal-present.html
+++ b/source/widget/gold/Modal-present.html
@@ -11,29 +11,38 @@
     <link rel="stylesheet" type="text/css" href="../../lib/foundation/css/foundation.css">
     <!-- 这是当前模块样式文件 -->
     <link href="gold.css" rel="stylesheet">
+    <style>
+        body{background-color: #fff}
+    </style>
 </head>
 <body>
 <div class="present-box">
-    <img src="img/Modal-present.png" />
-    <div class="present-intro">
-        <span class="present-name">清华大学扑克牌</span>
-        <div class="present-intro-name">
-            <span class="present-intro-title">描<span>述 ：</span></span><span>清华园，孺子牛.......想要更深入了解清华大学么，那就一起玩会扑克牌吧。让玩耍与认知达到统一，美观而便捷</span>
+        <img src="img/Modal-present.png" />
+        <div class="present-intro">
+            <span class="present-name">清华大学扑克牌</span>
+            <div class="present-intro-name">
+                <span class="present-intro-title">描<span>述 ：</span></span><span>清华园，孺子牛.......想要更深入了解清华大学么，那就一起玩会扑克牌吧。让玩耍与认知达到统一，美观而便捷</span>
+            </div>
+            <div class="present-intro-name">
+                <span class="present-intro-title">数<span>量 ：</span></span><div class="present-dec"><p class="p1"></p></div>
+                <div class="present-num">1</div>
+                <div class="present-add"><p class="p1"></p><p class="p2"></p></div>
+                <span>仅剩 <em>19</em> 张</span>
+            </div>
+            <div class="present-intro-name">
+                <span class="present-intro-title">兑换额 ：</span><span><em>6800</em>金币</span>
+            </div>
         </div>
-        <div class="present-intro-name">
-            <span class="present-intro-title">数<span>量 ：</span></span><div class="present-dec"><p class="p1"></p></div>
-            <div class="present-num">1</div>
-            <div class="present-add"><p class="p1"></p><p class="p2"></p></div>
-            <span>仅剩 <em>19</em> 张</span>
-        </div>
-        <div class="present-intro-name">
-            <span class="present-intro-title">兑换额 ：</span><span><em>6800</em>金币</span>
-        </div>
-        <div class="present-exchange">确认兑换</div>
     </div>
-    <div class="present-address-box">
-        请选择收货地址
-    </div>
+<div class="present-address-box">
+    <span>请选择收货地址</span>
+    <form action="" method="get">
+        <label class="present-address-focus"><input type="radio" name="address" checked/>测试河北省 石家庄市 网校测试不用审核通过 15101089366</label>
+        <label><input type="radio" name="address"/>使用新的地址</label>
+    </form>
 </div>
+<div class="present-exchange">确认兑换</div>
+<script src="../../lib/jQuery/1.11.1/jquery.js"></script>
+<script src="gold.js"></script>
 </body>
 </html>
