金币商城去掉虚拟服装 魔法卡浮层去掉加减 每次只能买一张

--- a/source/widget/gold/Modal-red-card.html
+++ b/source/widget/gold/Modal-red-card.html
@@ -21,9 +21,8 @@
     <div class="red-card-intro">
         <span class="red-card-name">红名卡</span>
         <div class="red-card-intro-name">
-            <span class="red-card-intro-title">数<span>量 ：</span></span><div class="red-card-dec"><p class="p1"></p></div>
+            <span class="red-card-intro-title">数<span>量 ：</span></span>
             <div class="red-card-num">1</div>
-            <div class="red-card-add"><p class="p1"></p><p class="p2"></p></div>
             <span>仅剩 <em>19</em> 张</span>
         </div>
         <div class="red-card-intro-name">
