金币商城实物兑换commit

--- a/source/widget/gold/Modal-present.html
+++ b/source/widget/gold/Modal-present.html
@@ -27,10 +27,10 @@
                 <span class="present-intro-title">数<span>量 ：</span></span><div class="present-dec"><p class="p1"></p></div>
                 <div class="present-num">1</div>
                 <div class="present-add"><p class="p1"></p><p class="p2"></p></div>
-                <span>仅剩 <em>19</em> 张</span>
+                <span class="present-piece">仅剩 <em>19</em> 张</span>
             </div>
             <div class="present-intro-name">
-                <span class="present-intro-title">兑换额 ：</span><span><em>6800</em>金币</span>
+                <span class="present-intro-title">兑换额 ：</span><span class="present-intro-gold"><em>6800</em>金币</span>
             </div>
         </div>
     </div>
