--- a/source/widget/fresh/index.html
+++ b/source/widget/fresh/index.html
@@ -13,8 +13,62 @@
     <link href="fresh.css" rel="stylesheet">
   </head>
 <body>
-<button id="freshPost">发布新鲜事</button>
 <div class="row">
+
+       <!--新鲜事默认展开评论开始-->
+        <div class="fresh-list small-12" style="display:none">
+            <div class="fresh-avatar left">
+                <a href ="###">
+                    <img src="img/fresh_avatar.png" />
+                </a>
+            </div>
+            <div class="fresh-detail" data-id="57286179">
+               <!--新鲜事右侧头部文本消息显示开始-->
+               <div class="fresh-text">
+                  <div class="fresh-myname">
+                     <a href="###"  target="_blank" class="left">顾斐</a>
+                     <i class="fresh-v fresh-v-yellow" class="left"></i>
+                  </div>
+                  <div class="fresh-info">
+                    亲爱的孩子们，昨天的小新电台——《五月的草场》有没有收听呢？那么今天出一个小题目——草原上的人用什么办法消灭蝗虫呢？随机奖励正确的<img title="挤眼" src="http://img04.xesimg.com/icon/emoji/em_4.png" alt="">五个答案~~加油哦！<img title="出拳" src="http://img04.xesimg.com/icon/emoji/em_46.png" alt="">收听地址： <a href="http://t.xueersi.com/7boW01nx" target="_blank">http://t.xueersi.com/7boW01nx</a>
+                  </div>
+               </div> 
+               <!--新鲜事右侧头部文本消息显示结束-->
+               <!--小图开始-->
+               <div class="fresh-media fresh-type-img fresh-media-img-list">
+                  <div class="fresh-media-small-img">
+                    <img src="http://s03.xesimg.com/dynamic/9f09d2d352ea80e9c3d083f99483b632_small.jpg">
+                  </div>
+               </div>
+               <!--小图结束-->
+               <!--大图开始-->
+               <div class="fresh-media fresh-media-expand fresh-type-img hide"> </div>
+               <!--大图结束-->
+               <!--评论区域开始-->
+               <div class="fresh-barinfo">
+                  <span class="fresh-time left">11小时前</span> 
+                  <div class="fresh-right right">
+                      <span class="fresh-right-btn">
+                          <a title="评论" href="javascript:void(0);" class="fresh-comment-expand-btn" data-params="dynId=57362582&amp;type=1&amp;url=http://www.xueersi.com/LearningCenter/" data-codetype="1" data-id="57362582" data-type="2">评论</a>
+                          <em>(<i>33</i>)</em>
+                      </span>
+                      <span class="fresh-right-btn">
+                          <a title="收藏" href="javascript:void(0);" class="fresh-collect-add-btn" data-params="dynId=57362582&amp;type=1&amp;url=http://www.xueersi.com/LearningCenter/">收藏</a>
+                          <em>(<i>125</i>)</em>
+                      </span>
+                  </div>
+               </div>
+               <!--评论区域结束-->
+               <div class="fresh-comment-box hide">
+                  <div class="fresh-comment-detail-info">
+                      
+                  </div>   
+               </div>
+               <!--评论区域结束-->
+            </div>
+        </div>
+        <!--新鲜事默认展开评论结束-->
+
         <!--新鲜事单条列表信息开始————图片-->
         <div class="fresh-list small-12" >
             <div class="fresh-avatar left">
@@ -435,15 +489,16 @@
                 <input class="fresh-fileToUpload" id="fresh-fileToUpload" type="file" size="45"  name="dynImg" accept="image/*" />
              </div>
              <a href="javascript:void(0);">图片</a>
-            <em>（支持类型 JPG、PNG，大小不超过5M）</em>
-            <div class="fresh-send-submit-box right">
+             <em class="left">（支持类型 JPG、PNG，大小不超过5M）</em>
+             <div class="fresh-send-submit-box right">
               <button class="small radius button fresh-send-submit-btn">发布</button>
-            </div>
-            <span class="right">
+             </div>
+             <span class="right">
                 <em class="left">您还可以输入</em>
                 <em class="fresh-send-text-num left">140</em>
                 <em class="left">字</em>
-            </span>
+             </span>
+             <span class="fresh-comment-tips hide"></span>
         </div>
         <input type="hidden" value="0" name="mypretime">
     </form>
