Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/widget/fresh/index.html
+++ b/source/widget/fresh/index.html
@@ -433,18 +433,18 @@
         </div>
         <!--新鲜事单条列表信息结束————@我的-->
 
-        <!--新鲜事单条列表信息开始————热门新鲜事list加fresh-popular-list-->
-        <div class="fresh-list fresh-popular-list small-12">
+        <!--新鲜事单条列表信息开始————热门新鲜事list加fresh-popular-list fresh-hover-item代表滑过效果-->
+        <div class="fresh-list fresh-hover-item fresh-popular-list small-12">
             <div class="fresh-avatar left">
-                <a href ="###">
-                    <img src="img/fresh_avatar.png" />
+                <a target="_blank" href="http://www.xueersi.com/s/979168">
+                    <img src="img/fresh_avatar.png" date-role="fresh-avatar"/>
                 </a>
             </div>
             <div class="fresh-detail">
                <!--新鲜事右侧头部文本消息显示开始-->
                <div class="fresh-text">
                   <div class="fresh-myname">
-                     <a href="###"  target="_blank" class="left">顾斐</a>
+                     <a target="_blank" data-params="userId=979168" href="http://www.xueersi.com/s/979168" class="left">顾斐</a>
                      <i class="fresh-v fresh-v-yellow" class="left"></i>
                   </div>
                   <div class="fresh-info">
@@ -457,11 +457,11 @@
                   <span class="fresh-time left">11小时前</span> 
                   <div class="fresh-right right">
                       <span class="fresh-right-btn">
-                          <a title="评论" href="javascript:void(0);">评论</a>
+                          <a target="_blank" href="http://www.xueersi.com/homes/show/57783276" title="评论">评论</a>
                           <em>(33)</em>
                       </span>
                       <span class="fresh-right-btn">
-                          <a title="评论" href="javascript:void(0);">收藏</a>
+                          <a target="_blank" href="http://www.xueersi.com/homes/show/57783276" title="收藏">收藏</a>
                           <em>(125)</em>
                       </span>
                   </div>
