--- a/source/widget/personalCenter/centerHeader.html
+++ b/source/widget/personalCenter/centerHeader.html
@@ -45,12 +45,14 @@
 
         <!--关注start-->
         <!--1、未关注时-->
-        <!--<div class="centerHeader-notFoucs"><span class="centerHeader-notFoucs-btn">+关注</span></div>-->
+        <div class="centerHeader-notFoucs"><span class="centerHeader-notFoucs-btn">+关注</span></div>
 
         <!--2、已经关注-->
-        <div class="centerHeader-alFocus"><span class="centerHeader-alFocus-btn">已关注</span><span class="centerHeader-willFocus-btn">取消关注</span></div>
+        <div class="centerHeader-alFocus hide"><span class="centerHeader-alFocus-btn">已关注</span><span class="centerHeader-willFocus-btn">取消关注</span></div>
         <!--关注end-->
     </div>
 </div>
+<script type="text/javascript" src="../../lib/jQuery/1.11.1/jquery.min.js"></script>
+<script type="text/javascript" src="js/personalCenter.js" ></script>
 </body>
 </html>
