Signed-off-by: zhixiaoyang <913151232@qq.com>

--- a/source/widget/courseStudycenter/courseList.html
+++ b/source/widget/courseStudycenter/courseList.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>学习中心-课程列表</title>
+    <title>学习中心-录播直播作业列表</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
     <!-- 这是CSS库文件 -->
@@ -12,99 +12,97 @@
     <!-- 这是当前模块样式文件 -->
     <link href="coursestudycenter.css" rel="stylesheet"></head>
     <body>
-        <div class="row">
-            <div class="large-12 columns">
-                <div class="courselayout-list">
-                    <div class="courseList-title">
-                        <p>初一数学目标满分班人教版 录播课程</p>
-                    </div>
-                    <ul class="teacher-tab">
-                        <li class="current">1-20</li>
-                        <li>21-40</li>
-                        <li>41-60</li>
-                        <li>61-80</li>
-                        <li>80-100</li>
-                        <li>附赠奖</li>
-                    </ul>
-                    <table class="table course-table">
-                        <thead>
-                            <tr>
-                                <th width="45%">名称</th>
-                                <th width="40%">状态</th>
-                                <th width="15%">操作</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
-                                <td class="text-style studied">已学习</td>
-                                <td class="text-style">
-                                    <a class="button course-btn" href="##"><em class="button-icon icon-just-white"></em>立即学习</a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
-                                <td class="text-style studied-end">上次学到</td>
-                                <td class="text-style">
-                                    <a class="alert button course-btn" href="##"><em class="button-icon icon-just-white"></em>立即学习</a>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="courselayout-list">
-                    <div class="courseList-title">
-                        <p>初一数学目标满分班人教版 直播课程大纲</p>
-                    </div>
-                    <ul class="teacher-tab">
-                        <li class="current">主讲老师直播</li>
-                        <li>辅导老师直播</li>
-                    </ul>
-                    <table class="table course-table">
-                        <thead>
-                            <tr>
-                                <th width="20%">时间</th>
-                                <th width="35%">名称</th>
-                                <th width="20%">状态</th>
-                                <th width="15%">操作</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td class="static-gray">2015-10-11 90:00-10:30</td>
-                                <td>第1讲     初一数学目标满分班人教版 第一场直播<span class="studied-end">（补课）</span></td>
-                                <td class="text-style yellow-mark">未参加<em class="mark"></em></td>
-                                <td class="text-style">
-                                    <a class="button course-btn" href="##"><em class="button-icon icon-will-red"></em>立即回看</a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="static-red">2015-10-11 90:00-10:30</td>
-                                <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
-                                <td class="text-style studied-end">已开始</td>
-                                <td class="text-style">
-                                    <a class="alert button course-btn" href="##"><em class="button-icon icon-will-red"></em>立即上课</a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="static-gray">2015-10-11 90:00-10:30</td>
-                                <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
-                                <td class="text-style studied">已参加</td>
-                                <td class="text-style">
-                                    <a class="button course-btn" href="##"><em class="button-icon icon-will-red"></em>立即回看</a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="static-gray">2015-10-11 90:00-10:30</td>
-                                <td class="static-gray">第1讲     初一数学目标满分班人教版 第一场直播</td>
-                                <td class="text-style studied static-gray">未开始</td>
-                                <td class="text-style">
-                                    <button class="button course-btn course-btn-gray" disabled>等待回看</button>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
+        <div class="courselayout-list">
+            <div class="courseList-title">
+                <p>初一数学目标满分班人教版 录播课程</p>
+            </div>
+            <ul class="teacher-tab">
+                <li class="current">1-20</li>
+                <li>21-40</li>
+                <li>41-60</li>
+                <li>61-80</li>
+                <li>80-100</li>
+                <li>附赠奖</li>
+            </ul>
+            <table class="table course-table">
+                <thead>
+                    <tr>
+                        <th width="45%">名称</th>
+                        <th width="40%">状态</th>
+                        <th width="15%">操作</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
+                        <td class="text-style studied">已学习</td>
+                        <td class="text-style">
+                            <a class="button course-btn" href="##"><em class="button-icon icon-just-white"></em>立即学习</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
+                        <td class="text-style studied-end">上次学到</td>
+                        <td class="text-style">
+                            <a class="alert button course-btn" href="##"><em class="button-icon icon-just-white"></em>立即学习</a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="courselayout-list">
+            <div class="courseList-title">
+                <p>初一数学目标满分班人教版 直播课程大纲</p>
+            </div>
+            <ul class="teacher-tab">
+                <li class="current">主讲老师直播</li>
+                <li>辅导老师直播</li>
+            </ul>
+            <table class="table course-table">
+                <thead>
+                    <tr>
+                        <th width="20%">时间</th>
+                        <th width="35%">名称</th>
+                        <th width="20%">状态</th>
+                        <th width="15%">操作</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="static-gray">2015-10-11 90:00-10:30</td>
+                        <td>第1讲     初一数学目标满分班人教版 第一场直播<span class="studied-end">（补课）</span></td>
+                        <td class="text-style yellow-mark">未参加<em class="mark"></em></td>
+                        <td class="text-style">
+                            <a class="button course-btn" href="##"><em class="button-icon icon-will-red"></em>立即回看</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="static-red">2015-10-11 90:00-10:30</td>
+                        <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
+                        <td class="text-style studied-end">已开始</td>
+                        <td class="text-style">
+                            <a class="alert button course-btn" href="##"><em class="button-icon icon-will-red"></em>立即上课</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="static-gray">2015-10-11 90:00-10:30</td>
+                        <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
+                        <td class="text-style studied">已参加</td>
+                        <td class="text-style">
+                            <a class="button course-btn" href="##"><em class="button-icon icon-will-red"></em>立即回看</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="static-gray">2015-10-11 90:00-10:30</td>
+                        <td class="static-gray">第1讲     初一数学目标满分班人教版 第一场直播</td>
+                        <td class="text-style studied static-gray">未开始</td>
+                        <td class="text-style">
+                            <button class="button course-btn course-btn-gray" disabled>等待回看</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
                 <!-- <div class="courselayout-list">
                     <div class="courseList-title">
                         <p>初一数学人教版目标满分班 课堂笔记</p>
@@ -206,14 +204,11 @@
                         </tbody>
                     </table>
                 </div>
-            </div>
-        </div>
 
 
-
-        <!-- 这是jquery库文件 -->
-        <script type="text/javascript" src="../../lib/jQuery/2.1.1/jquery.min.js"></script>
-        <!-- 这是当前模块js文件 -->
-        <script type="text/javascript" src="coursestudycenter.js"></script>
-    </body>
-    </html>
+                <!-- 这是jquery库文件 -->
+                <script type="text/javascript" src="../../lib/jQuery/2.1.1/jquery.min.js"></script>
+                <!-- 这是当前模块js文件 -->
+                <script type="text/javascript" src="coursestudycenter.js"></script>
+            </body>
+            </html>
