--- a/source/widget/header/header.html
+++ b/source/widget/header/header.html
@@ -26,7 +26,9 @@
                         <div class="menu-layer">
                             <ul>
                                 <li data-type="1">
-                                <a href="/LearningCenter/message#_1">网校通知<em>(1)</em></a>
+                                    <a href="/LearningCenter/message#_1">
+                                        网校通知 <em>(1)</em>
+                                    </a>
                                 </li>
                                 <li data-type="4">
                                     <a href="/LearningCenter/message#_4">教师留言</a>
@@ -133,7 +135,8 @@
                     </li>
                     <li>
                         <a href="#">
-                            购物车 <em>2</em>
+                            购物车
+                            <em>2</em>
                         </a>
                     </li>
                     <li>
@@ -295,21 +298,25 @@
     </div>
     <!-- 头部导航 -->
     <div id="container" class="container">
-    <!-- 左右两例 -->
+        <!-- 左右两例 -->
         <div class="columns-wrap">
             <div class="l-columns left w-930 s-border">left 商城两例</div>
             <div class="r-columns right w-240 s-border">right</div>
         </div>
         <!-- 左中右三例 -->
-         <div class="columns-wrap">
+        <div class="columns-wrap">
             <div class="l-columns left w-240 s-border">left</div>
-             <div class="c-columns left w-690 s-border">center 首页三例</div>
+            <div class="c-columns left w-690 s-border">center 首页三例</div>
             <div class="r-columns right w-240 s-border">right</div>
         </div>
-         <!-- 左右两例 -->
+        <!-- 左右两例 -->
         <div class="columns-wrap">
             <div class="l-columns left w-920 s-border">left 个人主页两列</div>
             <div class="r-columns right w-260 s-border">right</div>
+        </div>
+         <!-- 左右两例 -->
+        <div class="columns-wrap">
+            <div class="l-columns left w-1050 s-border">left 个人中心左边主要内容区哉</div>
         </div>
     </div>
     <!-- 内容部分 -->
@@ -318,55 +325,5 @@
     <!-- 这是当前模块js文件 -->
     <script type="text/javascript" src="header.js"></script>
     <!-- 这是页脚部分代码  -->
-    <div id="footer">
-    <div class="foot_service">
-        <a target="_blank" class="service_share" href="http://www.xueersi.com/article/detail/1825">
-            <span>名师</span>
-            <p>课程中的互动选择题，参与互动的同时，还有奖励哦</p>
-        </a>
-        <a target="_blank" class="service_system" href="http://www.xueersi.com/article/detail/1824">
-            <span>陪伴</span>
-            <p>课后练习，期中期末考试，与全国学员一争高下</p>
-        </a>
-        <a target="_blank" class="service_live" href="http://www.xueersi.com/article/detail/1814">
-            <span>方便</span>
-            <p>与录播课程匹配的直播辅导，老师带着你做练习</p>
-        </a>
-        <a target="_blank" class="service_interaction" href="http://www.xueersi.com/app">
-            <span>有效</span>
-            <p>教师答疑，随时向老师提问，聆听老师的声音</p>
-        </a>
-    </div>
-
-    <div class="foot_area">
-        <p>
-            <a href="http://www.xueersi.com">网校首页</a>
-            |
-            <a href="http://www.xueersi.com/article/detail/1219">关于我们</a>
-            |
-            <a href="http://www.xueersi.com/article/detail/1220">合作专区</a>
-            |
-            <a href="http://www.xueersi.com/article/detail/1538">联系我们</a>
-            |
-            <a class="red" href="http://www.xueersi.com/article/detail/1495">版权声明</a>
-            |
-            <a href="http://www.xueersi.com/article/">帮助中心</a>
-        </p>
-        <p>
-            客服电话： <strong>400-800-2211</strong>
-            （免长途话费） Copyright &copy; 2009-2015 www.xueersi.com All Rights Reserved
-        </p>
-        <p>
-            北京学而思教育科技有限公司
-            <a target="_blank" href="http://www.miitbeian.gov.cn/state/outPortal/loginPortal.action">京ICP备09032638号</a>
-            京公网安备:1101082103
-        </p>
-        <p class="link">
-            <a target="_blank" href="https://search.szfw.org/cert/l/CX20120925001738002003" id="___szfw_logo___">
-                <img src="http://x04.xesimg.com/web/201209/13487953879693.png"></a>
-        </p>
-    </div>
-
-</div
 </body>
 </html>
